<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SpeedMath</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="speed_math">Speed Math</string>
    <string name="play_btn">Play</string>
    <string name="highscores_btn">Highscores</string>
    <string name="help_btn">Help</string>
    <string name="about_btn">About</string>
    <string name="about_txt">About</string>
    <string name="version_txt">Version: 1.0</string>
    <string name="author_txt">Author: Tavita</string>
    <string name="description_txt">This game is a project for otago university course TELE404</string>
    <string name="home_btn">Home</string>
    <string name="title_activity_help">Help</string>
    <string name="hello_world">Hello world!</string>
    <string name="help_txt">Help</string>
    <string name="open_browser_btn">Open in browser</string>
    <string name="title_activity_game_screen">GameScreen</string>
    <string name="title_activity_countdown_timer">CountdownTimer</string>
    <string name="true_btn">True</string>
    <string name="false_btn">False</string>
    <string name="title_activity_toast">Toast</string>
    <string name="questions_txt">Questions Remaining: </string>
    <string name="title_activity_game_over">GameOver</string>
    <string name="game_over_txt">Game Over</string>
    <string name="score_txt">Time:</string>
    <string name="retry_btn">Retry</string>
    <string name="title_activity_play_game">PlayGame</string>
    <string name="wrong_ans_txt">Incorrect Answers: </string>
    <string name="penalty_txt">Penalty: </string>
    <string name="final_score_txt">Final Score: </string>
    <string name="title_activity_highscores">Highscores</string>
    <string name="title_activity_new_highscore">NewHighscore</string>
    <string name="highscore_txt">New High Score!</string>
    <string name="enter_name_txt">Enter your name: </string>
    <string name="submit_btn">Submit</string>
    <string name="title_activity_leaderboards">Leaderboards</string>
    <string name="title_activity_test">test</string>

</resources>
