<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nz.ac.otago.telecom.speedmath.About"
    android:background="#00BBFF" >

    <TextView
        android:id="@+id/about_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/about_txt"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/version_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_txt"
		android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/version_txt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/author_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/version_txt"
		android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/author_txt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/description_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/author_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/description_txt"
        android:textSize="20sp"
        android:typeface="normal" />

    <Button
        android:id="@+id/home_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/about_txt"
        android:layout_alignRight="@+id/about_txt"
        android:layout_below="@+id/description_txt"
        android:layout_marginTop="40dp"
        android:text="@string/home_btn" 
        android:background="#f2de15"/>

</RelativeLayout>
