<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="nz.ac.otago.telecom.speedmath.NewHighscore"
    android:background="#00BBFF">

    <TextView
        android:id="@+id/highscore_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/highscore_txt"
        android:background="#f2de15"/>
    <TextView
        android:id="@+id/new_highscore_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/highscore_txt"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:background="#f2de15"
        />
    <TextView
        android:id="@+id/entername_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/new_highscore_txt"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_centerHorizontal="true"
        android:text="@string/enter_name_txt"
        android:gravity="center"
        android:background="#f2de15"
         />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/entername_txt"
        android:gravity="center"
        android:ems="10"
        android:background="#f2de15"
 />

    <Button
        android:id="@+id/sumbit_user_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/submit_btn"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="View All HighScores"
        android:id="@+id/view_highscores_btn"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="viewHighscores"/>
</RelativeLayout>
